--- a/scss/layout/_site.scss
+++ b/scss/layout/_site.scss
@@ -125,3 +125,13 @@ li {
   }
   
 }
+
+@media (max-width: 600px) {
+  .center-content {
+    form {
+      .submit {
+        top: 28px;
+      }
+    }
+  }
+}
